<resources>
    <string name="app_name">Cadastro</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome completo</string>
    <string name="email">Email</string>
    <string name="nomeEtText">Digite seu nome</string>
    <string name="telefone_hint">Digite o telefone ex:xx-xxxxxxxxx</string>
    <string name="email_hintText">Digite seu email</string>
    <string name="telefone_tvText">Telefone</string>
    <string name="email_cbText">ingressar na lista de e-mails?</string>
    <string name="sexo_tvText">Sexo</string>
    <string name="limparBtText">limpar</string>
    <string name="salvarBtText">salvar</string>
    <string name="ufSpText">UF</string>
    <string name="cidadeEtText">Digite sua cidade</string>
    <string name="cidadeTvText">Cidade</string>
    <string name="femininoRbText">Feminino</string>
    <string name="masculinoRbText">Masculino</string>
    <string-array name="ufOptions">
        <item>Acre (AC)</item>
        <item>Alagoas (AL)</item>
        <item>Amapá (AP)</item>
        <item>Amazonas (AM)</item>
        <item>Bahia (BA)</item>
        <item>Ceará (CE)</item>
        <item>Distrito Federal (DF)</item>
        <item>Espírito Santo (ES)</item>
        <item>Goiás (GO)</item>
        <item>Maranhão (MA)</item>
        <item>Mato Grosso (MT)</item>
        <item>Mato Grosso do Sul (MS)</item>
        <item>Minas Gerais (MG)</item>
        <item>Pará (PA)</item>
        <item>Paraíba (PB)</item>
        <item>Paraná (PR)</item>
        <item>Pernambuco (PE)</item>
        <item>Piauí (PI)</item>
        <item>Rio de Janeiro (RJ)</item>
        <item>Rio Grande do Norte (RN)</item>
        <item>Rio Grande do Sul (RS)</item>
        <item>Rondônia (RO)</item>
        <item>Roraima (RR)</item>
        <item>Santa Catarina (SC)</item>
        <item>São Paulo (SP)</item>
        <item>Sergipe (SE)</item>
        <item>Tocantins (TO)</item>
    </string-array>
</resources>