<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/tv_cadastro"
        android:text="@string/cadastro"
        android:textSize="32sp"

        android:background="@color/purple_200"

        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/nome_tv"
        android:text="@string/nome"
        android:textSize="24sp"
        android:labelFor="@+id/nome_et"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nome_et"
        android:hint="@string/digite_seu_nome"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telefone_tv"
        android:labelFor="@+id/telefone_et"
        android:text="@string/telefone_tvText"
        android:textSize="24sp"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/telefone_et"
        android:hint="@string/telefone_hint"
        android:textSize="24sp"
        />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_tv"
        android:labelFor="@+id/email_et"
        android:text="@string/email"
        android:textSize="24sp"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/email_et"
        android:hint="@string/email_hintText"
        android:textSize="24sp"
        />

    <CheckBox
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/email_cbText"
        android:textSize="16sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sexo_tv"
        android:text="@string/sexo_tvText"
        android:textSize="16sp"
        />
    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/masc_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Masculino"/>

        <RadioButton
            android:id="@+id/fem_rb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Feminino"/>



    </RadioGroup>












</LinearLayout>
